--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -81,7 +81,7 @@ en:
   invalid_login_method: Login failed due to account mismatch. You need to log in with omniauth.
   invite_message: "To invite someone to the meeting, send them this link:"
   landing:
-    about: "%{href} is a simple front-end for your BigBlueButton open-source web conferencing server. You can create your own rooms to host sessions, or join others using a short and convenient link."
+    about: "You can create your own rooms to host sessions. Each room has a convenient link for participants to join the session."
     welcome: RT Virtual Class Management
     video: Watch our tutorial on using Remote Teachers
     upgrade: Show me how to upgrade to 2.0!
