added text changes

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -81,8 +81,8 @@ en:
   invalid_login_method: Login failed due to account mismatch. You need to log in with omniauth.
   invite_message: "To invite someone to the meeting, send them this link:"
   landing:
-    about: "You can create your own rooms to host sessions. Each room has a convenient link for participants to join the session."
-    welcome: RT Virtual Class Management
+    about: "You can create your own rooms to host sessions. Each room has a convenient invitation link for participants to joint the session."
+    welcome: Virtual Class Management
     video: Watch our tutorial on using Remote Teachers
     upgrade: Show me how to upgrade to 2.0!
     version: We've released a new version of Remote Teachers, but your database isn't compatible.
